# gemmacli

./: .gitignore  CHANGELOG.md  CLAUDE.md  FAQ.md  QUICKSTART.md  README.md  RUST_PLAN.md  VERSIONS.md  gemma  gemma_graph.py  gemma_rag.py  genie  genie_graph.py  genie_rag.py  install.sh
docs/: CHANGELOG.md  DEVELOPER.md  FAQ.md  QUICKSTART.md  RUST_PLAN.md  VERSIONS.md
python/: genie  genie_graph.py  genie_rag.py
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/crates/genie/: Cargo.toml  build.rs
rust/crates/genie-bootstrap/: Cargo.toml
rust/crates/genie-bootstrap/src/: main.rs
rust/crates/genie-bootstrap/tests/: cli.rs
rust/crates/genie/src/: backend.rs  cli.rs  config.rs  doctor.rs  ffi.rs  graph.rs  lib.rs  llm.rs  main.rs  models.rs  parse.rs  rag.rs
rust/crates/genie/tests/: integration.rs  unit.rs
rust/crates/genie/tests/fixtures/: notes.txt
rust/installer/: README.md  install.ps1  install.sh  manifest.example.json  manifest.json
