[package]
name = "genie-bootstrap"
version = "0.1.0"
edition = "2021"
description = "OS-agnostic modular installer for Gemma Genie — probes the environment and fetches only the components it needs"
license = "Apache-2.0"

[[bin]]
name = "genie-bootstrap"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
sha2 = "0.10"
