[package]
name = "genie-bootstrap"
version = "0.2.4"
edition = "2021"
description = "OS-agnostic modular installer for Gemma Genie — probes the environment and fetches only the components it needs"
license = "Apache-2.0"
repository = "https://github.com/sbmandava/gemma-genie"
homepage = "https://github.com/sbmandava/gemma-genie"
keywords = ["installer", "bootstrap", "offline", "llm", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "genie-bootstrap"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
sha2 = "0.10"
